<resources>
    <string name="app_name">Math Quiz App</string>
    <string name="image">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="train_your_brain">Train Your Brain!</string>
    <string name="_3_4_6">(3 + 4) * 6</string>
    <string name="_10">10</string>
    <string name="_29">29</string>
</resources>